--- a/src/GUI/Icons/README
+++ b/src/GUI/Icons/README
@@ -3,6 +3,6 @@ Icon Source: http://openiconlibrary.sourceforge.net/gallery2/?./Icons
 
 Vielleicht muss die Größe aber doch angepasst werden, bei mir ist das ganze Shit irgendwie blurry
 
-Icons die gepresst werden kann man gut invertieren
+Icons die on_button_down'ed werden kann man gut invertieren
 Diese Seite stellt soeinen Dienst bereit: http://tjshome.com/imageproc.php
 Ich habe das jetzt nicht für alle Bilder durchgeführt, weil mir die Icons noch nicht so gut gefallen
